infrastructure/03-apps/pdf/manifests/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: stirling-pdf
  namespace: pdf
  labels:
    app.kubernetes.io/name: stirling-pdf
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: stirling-pdf
  template:
    metadata:
      labels:
        app.kubernetes.io/name: stirling-pdf
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 14852
        runAsGroup: 14852
        fsGroup: 14852
      tolerations:
        - operator: Exists
      containers:
        - name: stirling-pdf
          image: stirlingtools/stirling-pdf:2.11.0
          command: ["task", "engine:run"]
          workingDir: /app
          ports:
            - containerPort: 5001
              name: http
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              cpu: "1"
              memory: 3Gi
            requests:
              cpu: 250m
              memory: 1Gi
          volumeMounts:
            - name: tmp-volume
              mountPath: /tmp
            - name: app-volume
              mountPath: /app/data
      volumes:
        - name: tmp-volume
          emptyDir: {}
        - name: app-volume
          emptyDir: {}
