infrastructure/03-apps/pdf/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf
  namespace: pdf
  labels:
    app.kubernetes.io/name: stirling-pdf
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: stirling-pdf
